# Luma

./: .gitignore  PRD.md  README.md  README.zh-CN.md  example.env.local  requirements-dev.txt  requirements.txt
docs/: expressions_and_m5.md  v0_hardware.md
firmware/core_s3/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
firmware/core_s3/main/apps/app_luma/: app_luma.cpp  app_luma.h  luma_config.h  luma_qgif_player.cpp  luma_qgif_player.h  luma_voice_runtime.cpp  luma_voice_runtime.h  luma_ws_client.cpp  luma_ws_client.h
firmware/core_s3/main/assets/: assets.cpp  assets.h  lang_sound_placeholders.S
firmware/core_s3/main/hal/: audio.cpp  compat_newlib_ctype.c  hal.cpp  hal.h  hal_io_expander.cpp  hal_network.cpp  hal_rtc.cpp
firmware/core_s3/main/hal/board/: cores3_audio_codec.h  hal_bridge.cc  hal_bridge.h  stackchan.cc
firmware/core_s3/main/luma_platform/: audio_codec.cpp  audio_codec.h  axp2101.cpp  axp2101.h  backlight.cpp  backlight.h  board.cpp  board.h  display.h  i2c_device.cpp  i2c_device.h  settings.cpp  settings.h  system_info.cpp  system_info.h
firmware/core_s3/main/luma_platform/net/: network.cpp  network.h  web_socket.cpp  web_socket.h
gif/: Discord.qgif  Hello.qgif  MD.qgif  Netflix.qgif  Pornhub.qgif  action_eat.qgif  action_pingpong.qgif  action_sleepy.qgif  action_sneeze_01.qgif  action_sneeze_02.qgif  action_speed.qgif  action_water_gun_01.qgif  action_water_gun_02.qgif  action_yawn.qgif  bird.qgif  cry.qgif  devil_eyes.qgif  effect_rotate.qgif  effect_sakura.qgif  effect_shrink.qgif  emotion_angry_01.qgif  emotion_angry_03.qgif  emotion_angry_04.qgif  emotion_angry_fire.qgif  emotion_devil_02.qgif  emotion_distracted.qgif  emotion_dizzy.qgif  emotion_frustrated.qgif  emotion_happy.qgif  emotion_love_01.qgif  emotion_love_02.qgif  emotion_relaxed.qgif  emotion_scared.qgif  emotion_smile.qgif  emotion_smirk.qgif  emotion_surprised.qgif  emotion_uwu.qgif  eye_peek.qgif  (+11 more)
(+39 files in other folders)
